--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,14 +44,16 @@ dependencies:
   firebase_storage: ^11.0.14
   flutter:
     sdk: flutter
-  form_builder_validators: ^9.0.0
+  form_builder_validators: ^8.4.0
   flutter_pdfview: ^1.2.9
-  form_builder_file_picker: ^4.0.0
+  form_builder_file_picker: ^2.4.0
   http: ^0.13.4
   image_picker: ^0.8.7
   open_file: ^3.2.1
   url_launcher: ^6.1.10
+  collection: ^1.17.0
   permission_handler: ^10.2.0
+  firebase_messaging: ^14.6.1
 
 dev_dependencies:
 
@@ -76,6 +78,13 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+
+    - assets/images/1.jpg
+    - assets/images/2.jpg
+    - assets/images/3.jpg
+    - assets/images/4.jpg
+    - assets/images/5.jpg
+    - assets/images/7.jpg
 
     - assets/images/MU_Logo.jpg
     - assets/images/cd.jpg
